[tool.poetry]
name = "stochastic-programming"
version = "0.1.0"
description = ""
authors = ["Jakub Zapletal <zapletalja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.8.0"
pandas = "^2.2.2"
mpi4py = "^4.0.0"
mpi-sppy = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
